--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,44 +1,118 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center|center_horizontal|center_vertical"
-    android:orientation="vertical"
-    tools:context="com.example.mytest.MainActivity" >
+    android:layout_height="match_parent" >
 
-    <LinearLayout android:id="@+id/Layout_top"  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:orientation="horizontal">  
-        <TextView android:text="用户名："  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"/>  
-        <EditText android:id="@+id/userName"  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"/>  
-    </LinearLayout>  
-    <LinearLayout android:id="@+id/Layout_middle"  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:orientation="horizontal">  
-        <TextView android:text="密码："  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"/>  
-        <EditText android:id="@+id/userPwd"  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"/>  
-    </LinearLayout>  
-    <Button android:id="@+id/login_Button"  
-        android:text="登陆"  
-        android:layout_width="fill_parent"  
-        android:layout_height="wrap_content" /> 
-	<TextView android:text="用户名："  
-            android:layout_width="fill_parent"  
-            android:layout_height="wrap_content"
-    		android:id="@+id/kuanTextView1"
-            /> 
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/rl_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+
+        <!-- 底部tab -->
+
+        <LinearLayout
+            android:id="@+id/ll_bottom_tab"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" 
+            android:baselineAligned="true">
+
+            <RelativeLayout
+                android:id="@+id/rl_know"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0" >
+
+                <ImageView
+                    android:id="@+id/iv_know"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/btn_know_nor" 
+                    android:contentDescription="@null"/>
+
+                <TextView
+                    android:id="@+id/tv_know"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/iv_know"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/bottom_tab_know"
+                    android:textColor="@color/bottomtab_normal"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_want_know"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0" >
+
+                <ImageView
+                    android:id="@+id/iv_i_want_know"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/btn_wantknow_nor"
+                    android:contentDescription="@null" />
+
+                <TextView
+                    android:id="@+id/tv_i_want_know"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/iv_i_want_know"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/bottom_tab_wantknow"
+                    android:textColor="@color/bottomtab_normal"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_me"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0" >
+
+                <ImageView
+                    android:id="@+id/iv_me"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/btn_my_nor"
+                    android:contentDescription="@null" />
+                
+
+                <TextView
+                    android:id="@+id/tv_me"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/iv_me"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/bottom_tab_my"
+                    android:textColor="@color/bottomtab_normal"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <!-- 内容部分， fragment切换 -->
+
+        <LinearLayout
+            android:id="@+id/content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/line"
+            android:layout_below="@+id/top_tab"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@id/ll_bottom_tab"
+            android:background="@color/line" />
+    </RelativeLayout>
+    
+</FrameLayout>
